--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java' // подключиле джаву
+    id 'java'
 }
 
 plugins {
@@ -7,12 +7,12 @@ plugins {
 }
 
 repositories {
-    mavenCentral()   // зависимости(артефакты)
+    mavenCentral()
 }
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.16.0",   
+            "com.codeborne:selenide:6.16.0",
             "org.junit.jupiter:junit-jupiter:5.9.3")
 }
 
